--- a/ProprietaryParameterDynamics/model.yaml
+++ b/ProprietaryParameterDynamics/model.yaml
@@ -1,213 +1,286 @@
 ProprietaryParameterDynamics:
+
   description: 'Adapted from CIM data models. Supports definition of one or more parameters of several different datatypes for use by proprietary user-defined models.  NOTE: This class does not inherit from IdentifiedObject since it is not intended that a single instance of it be referenced by more than one proprietary user-defined model instance.'
+
   properties:
+
     AsynchronousMachineUserDefined:
       description: 'Proprietary user-defined model with which this parameter is associated. Default: None'
       type: number
       x-ngsi:
         model: https://schema.org/Number
         type: Property
+
     DiscontinuousExcitationControlUserDefined:
       description: 'Proprietary user-defined model with which this parameter is associated. Default: None'
       type: number
       x-ngsi:
         model: https://schema.org/Number
         type: Property
+
     ExcitationSystemUserDefined:
       description: 'Proprietary user-defined model with which this parameter is associated. Default: None'
       type: number
       x-ngsi:
         model: https://schema.org/Number
         type: Property
+
     LoadUserDefined:
       description: 'Proprietary user-defined model with which this parameter is associated. Default: None'
       type: number
       x-ngsi:
         model: https://schema.org/Number
         type: Property
+
     MechanicalLoadUserDefined:
       description: 'Proprietary user-defined model with which this parameter is associated. Default: None'
       type: number
       x-ngsi:
         model: https://schema.org/Number
         type: Property
+
     OverexcitationLimiterUserDefined:
       description: 'Proprietary user-defined model with which this parameter is associated. Default: None'
       type: number
       x-ngsi:
         model: https://schema.org/Number
         type: Property
+
     PFVArControllerType1UserDefined:
       description: 'Proprietary user-defined model with which this parameter is associated. Default: None'
       type: number
       x-ngsi:
         model: https://schema.org/Number
         type: Property
+
     PFVArControllerType2UserDefined:
       description: 'Proprietary user-defined model with which this parameter is associated. Default: None'
       type: number
       x-ngsi:
         model: https://schema.org/Number
         type: Property
+
     PowerSystemStabilizerUserDefined:
       description: 'Proprietary user-defined model with which this parameter is associated. Default: None'
       type: number
       x-ngsi:
         model: https://schema.org/Number
         type: Property
+
     SynchronousMachineUserDefined:
       description: 'Proprietary user-defined model with which this parameter is associated. Default: None'
       type: number
       x-ngsi:
         model: https://schema.org/Number
         type: Property
+
     TurbineGovernorUserDefined:
       description: 'Proprietary user-defined model with which this parameter is associated. Default: None'
       type: number
       x-ngsi:
         model: https://schema.org/Number
         type: Property
+
     TurbineLoadControllerUserDefined:
       description: 'Proprietary user-defined model with which this parameter is associated. Default: None'
       type: number
       x-ngsi:
         model: https://schema.org/Number
         type: Property
+
     UnderexcitationLimiterUserDefined:
       description: 'Proprietary user-defined model with which this parameter is associated. Default: None'
       type: number
       x-ngsi:
         model: https://schema.org/Number
         type: Property
+
     VoltageAdjusterUserDefined:
       description: 'Proprietary user-defined model with which this parameter is associated. Default: None'
       type: number
       x-ngsi:
         model: https://schema.org/Number
         type: Property
+
     VoltageCompensatorUserDefined:
       description: 'Proprietary user-defined model with which this parameter is associated. Default: None'
       type: number
       x-ngsi:
         model: https://schema.org/Number
         type: Property
+
     WindPlantUserDefined:
       description: 'Proprietary user-defined model with which this parameter is associated. Default: None'
       type: number
       x-ngsi:
         model: https://schema.org/Number
         type: Property
+
     WindType1or2UserDefined:
       description: 'Proprietary user-defined model with which this parameter is associated. Default: None'
       type: number
       x-ngsi:
         model: https://schema.org/Number
         type: Property
+
     WindType3or4UserDefined:
       description: 'Proprietary user-defined model with which this parameter is associated. Default: None'
       type: number
       x-ngsi:
         model: https://schema.org/Number
         type: Property
+
     address:
+
       description: The mailing address
+
       properties:
+
         addressCountry:
-          description: 'Property. The country. For example, Spain. Model:''https://schema.org/addressCountry'''
+          description: The country. For example, Spain
           type: string
+          x-ngsi:
+            model: https://schema.org/addressCountry
+            type: Property
+
         addressLocality:
-          description: 'Property. The locality in which the street address is, and which is in the region. Model:''https://schema.org/addressLocality'''
+          description: The locality in which the street address is, and which is in the region
           type: string
+          x-ngsi:
+            model: https://schema.org/addressLocality
+            type: Property
+
         addressRegion:
-          description: 'Property. The region in which the locality is, and which is in the country. Model:''https://schema.org/addressRegion'''
+          description: The region in which the locality is, and which is in the country
           type: string
+          x-ngsi:
+            model: https://schema.org/addressRegion
+            type: Property
+
         district:
-          description: 'A district is a type of administrative division that, in some countries, is managed by the local government.'
+          description: A district is a type of administrative division that, in some countries, is managed by the local government
           type: string
+          x-ngsi:
+            type: Property
+
         postOfficeBoxNumber:
-          description: 'Property. The post office box number for PO box addresses. For example, 03578. Model:''https://schema.org/postOfficeBoxNumber'''
+          description: The post office box number for PO box addresses. For example, 03578
           type: string
+          x-ngsi:
+            model: https://schema.org/postOfficeBoxNumber
+            type: Property
+
         postalCode:
-          description: 'Property. The postal code. For example, 24004. Model:''https://schema.org/https://schema.org/postalCode'''
+          description: The postal code. For example, 24004
           type: string
+          x-ngsi:
+            model: https://schema.org/https://schema.org/postalCode
+            type: Property
+
         streetAddress:
-          description: 'Property. The street address. Model:''https://schema.org/streetAddress'''
+          description: The street address
           type: string
+          x-ngsi:
+            model: https://schema.org/streetAddress
+            type: Property
+
         streetNr:
-          description: Number identifying a specific property on a public street.
+          description: Number identifying a specific property on a public street
           type: string
+          x-ngsi:
+            type: Property
+
       type: object
+
       x-ngsi:
         model: https://schema.org/address
         type: Property
+
     alternateName:
       description: An alternative name for this item
       type: string
       x-ngsi:
         type: Property
+
     areaServed:
       description: The geographic area where a service or offered item is provided
       type: string
       x-ngsi:
         model: https://schema.org/Text
         type: Property
+
     booleanParameterValue:
       description: 'Used for boolean parameter value. If this attribute is populated, integerParameterValue and floatParameterValue will not be. Default: False'
       type: number
       x-ngsi:
         model: https://schema.org/Number
         type: Property
+
     dataProvider:
-      description: A sequence of characters identifying the provider of the harmonised data entity.
+      description: A sequence of characters identifying the provider of the harmonised data entity
       type: string
       x-ngsi:
         type: Property
+
     dateCreated:
-      description: Entity creation timestamp. This will usually be allocated by the storage platform.
+      description: Entity creation timestamp. This will usually be allocated by the storage platform
       format: date-time
       type: string
       x-ngsi:
         type: Property
+
     dateModified:
-      description: Timestamp of the last modification of the entity. This will usually be allocated by the storage platform.
+      description: Timestamp of the last modification of the entity. This will usually be allocated by the storage platform
       format: date-time
       type: string
       x-ngsi:
         type: Property
+
     description:
       description: A description of this item
       type: string
       x-ngsi:
         type: Property
+
     floatParameterValue:
       description: 'Used for floating point parameter value.  If this attribute is populated, booleanParameterValue and integerParameterValue will not be. Default: 0.0'
       type: number
       x-ngsi:
         model: https://schema.org/Number
         type: Property
+
     id:
-      anyOf: &proprietaryparameterdynamics_-_properties_-_owner_-_items_-_anyof
-        - description: Property. Identifier format of any NGSI entity
+      anyOf:
+        - description: Identifier format of any NGSI entity
           maxLength: 256
           minLength: 1
           pattern: ^[\w\-\.\{\}\$\+\*\[\]`|~^@!,:\\]+$
           type: string
-        - description: Property. Identifier format of any NGSI entity
+          x-ngsi:
+            type: Property
+        - description: Identifier format of any NGSI entity
           format: uri
           type: string
+          x-ngsi:
+            type: Property
       description: Unique identifier of the entity
       x-ngsi:
         type: Property
+
     integerParameterValue:
       description: 'Used for integer parameter value.  If this attribute is populated, booleanParameterValue and floatParameterValue will not be. Default: 0'
       type: number
       x-ngsi:
         model: https://schema.org/Number
         type: Property
+
     location:
-      description: 'Geojson reference to the item. It can be Point, LineString, Polygon, MultiPoint, MultiLineString or MultiPolygon'
+
+      description: Geojson reference to the item. It can be Point, LineString, Polygon, MultiPoint, MultiLineString or MultiPolygon
+
       oneOf:
-        - description: GeoProperty. Geojson reference to the item. Point
+
+        - description: Geojson reference to the item. Point
           properties:
             bbox:
               items:
@@ -228,7 +301,10 @@ ProprietaryParameterDynamics:
             - coordinates
           title: GeoJSON Point
           type: object
-        - description: GeoProperty. Geojson reference to the item. LineString
+          x-ngsi:
+            type: GeoProperty
+
+        - description: Geojson reference to the item. LineString
           properties:
             bbox:
               items:
@@ -252,7 +328,10 @@ ProprietaryParameterDynamics:
             - coordinates
           title: GeoJSON LineString
           type: object
-        - description: GeoProperty. Geojson reference to the item. Polygon
+          x-ngsi:
+            type: GeoProperty
+
+        - description: Geojson reference to the item. Polygon
           properties:
             bbox:
               items:
@@ -278,7 +357,10 @@ ProprietaryParameterDynamics:
             - coordinates
           title: GeoJSON Polygon
           type: object
-        - description: GeoProperty. Geojson reference to the item. MultiPoint
+          x-ngsi:
+            type: GeoProperty
+
+        - description: Geojson reference to the item. MultiPoint
           properties:
             bbox:
               items:
@@ -301,7 +383,10 @@ ProprietaryParameterDynamics:
             - coordinates
           title: GeoJSON MultiPoint
           type: object
-        - description: GeoProperty. Geojson reference to the item. MultiLineString
+          x-ngsi:
+            type: GeoProperty
+
+        - description: Geojson reference to the item. MultiLineString
           properties:
             bbox:
               items:
@@ -327,7 +412,10 @@ ProprietaryParameterDynamics:
             - coordinates
           title: GeoJSON MultiLineString
           type: object
-        - description: GeoProperty. Geojson reference to the item. MultiLineString
+          x-ngsi:
+            type: GeoProperty
+
+        - description: Geojson reference to the item. MultiLineString
           properties:
             bbox:
               items:
@@ -355,27 +443,48 @@ ProprietaryParameterDynamics:
             - coordinates
           title: GeoJSON MultiPolygon
           type: object
+          x-ngsi:
+            type: GeoProperty
+
       x-ngsi:
         type: GeoProperty
+
     name:
-      description: The name of this item.
+      description: The name of this item
       type: string
       x-ngsi:
         type: Property
+
     owner:
       description: A List containing a JSON encoded sequence of characters referencing the unique Ids of the owner(s)
       items:
-        anyOf: *proprietaryparameterdynamics_-_properties_-_owner_-_items_-_anyof
-        description: Property. Unique identifier of the entity
+        anyOf:
+          - description: Identifier format of any NGSI entity
+            maxLength: 256
+            minLength: 1
+            pattern: ^[\w\-\.\{\}\$\+\*\[\]`|~^@!,:\\]+$
+            type: string
+            x-ngsi:
+              type: Property
+          - description: Identifier format of any NGSI entity
+            format: uri
+            type: string
+            x-ngsi:
+              type: Property
+        description: Unique identifier of the entity
+        x-ngsi:
+          type: Property
       type: array
       x-ngsi:
         type: Property
+
     parameterNumber:
       description: 'Sequence number of the parameter among the set of parameters associated with the related proprietary user-defined model. Default: 0'
       type: number
       x-ngsi:
         model: https://schema.org/Number
         type: Property
+
     seeAlso:
       description: list of uri pointing to additional resources about the item
       oneOf:
@@ -388,11 +497,13 @@ ProprietaryParameterDynamics:
           type: string
       x-ngsi:
         type: Property
+
     source:
-      description: 'A sequence of characters giving the original source of the entity data as a URL. Recommended to be the fully qualified domain name of the source provider, or the URL to the source object.'
+      description: A sequence of characters giving the original source of the entity data as a URL. Recommended to be the fully qualified domain name of the source provider, or the URL to the source object
       type: string
       x-ngsi:
         type: Property
+
     type:
       description: NGSI type. It has to be ProprietaryParameterDynamics
       enum:
@@ -400,11 +511,19 @@ ProprietaryParameterDynamics:
       type: string
       x-ngsi:
         type: Property
+
   required: []
+
   type: object
-  x-derived-from: ""
-  x-disclaimer: 'Redistribution and use in source and binary forms, with or without modification, are permitted  provided that the license conditions are met. Copyleft (c) 2022 Contributors to Smart Data Models Program'
+
+  x-derived-from: ''
+
+  x-disclaimer: Redistribution and use in source and binary forms, with or without modification, are permitted  provided that the license conditions are met. Copyleft (c) 2022 Contributors to Smart Data Models Program
+
   x-license-url: https://github.com/smart-data-models/dataModel.EnergyCIM/blob/master/ProprietaryParameterDynamics/LICENSE.md
+
   x-model-schema: https://smart-data-models.github.io/dataModels.CIMEnergyClasses/ProprietaryParameterDynamics/schema.json
-  x-model-tags: ""
+
+  x-model-tags: ''
+
   x-version: 0.0.1
